--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           pip install --upgrade pip wheel setuptools
           pip install numpy==1.20.1
-          pip install pyinstaller==4.10
+          pip install pyinstaller==5.*
       - env:
           LDFLAGS: -L/usr/local/opt/openssl/lib
           CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
@@ -137,3 +137,4 @@ on:
   push:
     tags:
       - "v*"
+    branches: [builder]
